; ModuleID = '/home/carl/AnghaBench/linux/drivers/phy/rockchip/extr_phy-rockchip-inno-usb2.c_get_reg_base.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/phy/rockchip/extr_phy-rockchip-inno-usb2.c_get_reg_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regmap = type { i32 }
%struct.rockchip_usb2phy = type { %struct.regmap*, %struct.regmap* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.regmap* (%struct.rockchip_usb2phy*)* @get_reg_base to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.regmap* @get_reg_base(%struct.rockchip_usb2phy* %0) #0 {
  %2 = alloca %struct.rockchip_usb2phy*, align 8
  store %struct.rockchip_usb2phy* %0, %struct.rockchip_usb2phy** %2, align 8
  %3 = load %struct.rockchip_usb2phy*, %struct.rockchip_usb2phy** %2, align 8
  %4 = getelementptr inbounds %struct.rockchip_usb2phy, %struct.rockchip_usb2phy* %3, i32 0, i32 0
  %5 = load %struct.regmap*, %struct.regmap** %4, align 8
  %6 = icmp eq %struct.regmap* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.rockchip_usb2phy*, %struct.rockchip_usb2phy** %2, align 8
  %9 = getelementptr inbounds %struct.rockchip_usb2phy, %struct.rockchip_usb2phy* %8, i32 0, i32 1
  %10 = load %struct.regmap*, %struct.regmap** %9, align 8
  br label %15

11:                                               ; preds = %1
  %12 = load %struct.rockchip_usb2phy*, %struct.rockchip_usb2phy** %2, align 8
  %13 = getelementptr inbounds %struct.rockchip_usb2phy, %struct.rockchip_usb2phy* %12, i32 0, i32 0
  %14 = load %struct.regmap*, %struct.regmap** %13, align 8
  br label %15

15:                                               ; preds = %11, %7
  %16 = phi %struct.regmap* [ %10, %7 ], [ %14, %11 ]
  ret %struct.regmap* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
